tests/snapshots/sfc/js/patches__generic_function_call_should_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue";
import { useStore } from "vuex";
export default {
  __name: "test",
  setup(__props) {
    const store = useStore();
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "div",
        null,
        _toDisplayString(_unref(store).state.count),
        1
        /* TEXT */
);
    };
  }
};
