tests/snapshots/sfc/js/patches__let_variable_increment_in_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue";
export default {
  __name: "test",
  setup(__props) {
    let value = $ref(10);
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("button", { onClick: ($event) => value.value++ }, _toDisplayString(_unref(value)), 9, ["onClick"]);
    };
  }
};
