tests/snapshots/sfc/js/patches__non_script_setup_component_with_export_default.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue";
const _sfc_main = {
  name: "MyComponent",
  props: { msg: String },
  data() {
    return { count: 0 };
  }
};
export function render(_ctx, _cache) {
  return _openBlock(), _createElementBlock(
    "div",
    null,
    _toDisplayString(_ctx.msg) + " - " + _toDisplayString(_ctx.count),
    1
    /* TEXT */
);
}
_sfc_main.render = render;
export default _sfc_main;
